default/objects/PPR_Legacy_Lead_History__c/PPR_Legacy_Lead_History__c.object-meta.xml
<CustomObject>
    <label>PPR Legacy Lead History</label>
    <nameField>
        <label>PPR Legacy Lead History Имя</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PPR Legacy Lead History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>