default/objects/PPR_Legacy_Lead_History__c/fields/Edit_Date__c.field-meta.xml
<CustomField>
    <fullName>Edit_Date__c</fullName>
    <description>Дата/время изменения поля</description>
    <label>Edit Date</label>
    <type>DateTime</type>
</CustomField>