default/objects/PPR_Legacy_Lead_History__c/fields/Edited__c.field-meta.xml
<CustomField>
    <fullName>Edited__c</fullName>
    <formula>CreatedBy.FirstName &amp;&quot; &quot;&amp; CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Edited</label>
    <type>Text</type>
</CustomField>