default/objects/PPR_Legacy_Lead_History__c/fields/Edited_By_ID__c.field-meta.xml
<CustomField>
    <fullName>Edited_By_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Edited By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PPR_Legacy_Lead_History</relationshipName>
    <type>Lookup</type>
</CustomField>