default/objects/PPR_Legacy_Lead_History__c/fields/Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>Lead_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Id</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>PPR Legacy Lead History</relationshipLabel>
    <relationshipName>PPR_Legacy_Lead_History</relationshipName>
    <type>Lookup</type>
</CustomField>