default/objects/PPR_Legacy_Lead_History__c/fields/New_Value__c.field-meta.xml
<CustomField>
    <fullName>New_Value__c</fullName>
    <description>Новые значения полей</description>
    <label>New Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>