default/objects/PPR_Legacy_Lead_History__c/fields/Old_Value__c.field-meta.xml
<CustomField>
    <fullName>Old_Value__c</fullName>
    <description>Предыдущие значения полей</description>
    <label>Old Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>