default/objects/PPR_Legacy_Lead_History__c/fields/PPR_Legacy_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>PPR_Legacy_Lead_ID__c</fullName>
    <label>PPR Legacy Lead ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>